tests/ui/rfcs/rfc-2632-const-trait-impl/const_derives/derive-const-non-const-type.stderr
error: const `impl` for trait `Default` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-non-const-type.rs:10:16
   |
LL | #[derive_const(Default)]
   |                ^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

